// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Classes with a single class 1`] = `
<div
  className="some-class"
/>
`;

exports[`Classes with multiple classes 1`] = `
<div
  className="some-class another-class"
/>
`;

exports[`Classes with no classes 1`] = `<div />`;

exports[`Div with a conditional class gets a single extra class with the prop flag 1`] = `
<div
  className="thing thing--big"
/>
`;

exports[`Div with a conditional class gets two extra classes without the prop flag 1`] = `
<div
  className="thing thing--small small"
/>
`;
